Change schema project for filtering per category
